--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
-.demo-card-wide.mdl-card {
-    width: 512px;
+
+#options {
+    width: 640px;
     position: relative;
     margin: auto;
+    top: 150px;
+}
+
+.mdl-radio.mdl-js-radio.mdl-js-ripple-effect {
+    display: block;
+}
+
+.demo-card-event.mdl-card {
+    float: left;
+    width: 256px;
+    height: 256px;
+    background: #F0B31B;
+    margin-left: 20px
+}
+
+.demo-card-event.mdl-card.little {
+    width: 256px;
+    height: 128px;
+    background: #F0B31B;
+    margin-top: 20px
+}
+.demo-card-event.mdl-card:hover{
+    z-index:1000;
+    box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
+    -webkit-box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
+    -moz-box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
 }
