--- a/style.css
+++ b/style.css
@@ -6,24 +6,23 @@
     top: 150px;
 }
 
-.mdl-radio.mdl-js-radio.mdl-js-ripple-effect {
-    display: block;
+.like_link {
+    pointer-events: h;
+}
+
+.mdl-card__supporting-text {
+    position: relative;
+    margin: auto;
 }
 
 .demo-card-event.mdl-card {
     float: left;
     width: 256px;
-    height: 256px;
+    height: 128px;
     background: #F0B31B;
     margin-left: 20px
 }
 
-.demo-card-event.mdl-card.little {
-    width: 256px;
-    height: 128px;
-    background: #F0B31B;
-    margin-top: 20px
-}
 .demo-card-event.mdl-card:hover{
     z-index:1000;
     box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
