--- a/style.css
+++ b/style.css
@@ -1,31 +1,5 @@
-
-#options {
-    width: 640px;
-    position: relative;
-    margin: auto;
-    top: 150px;
-}
-
-.like_link {
-    pointer-events: h;
-}
-
-.mdl-card__supporting-text {
-    position: relative;
-    margin: auto;
-}
-
-.demo-card-event.mdl-card {
-    float: left;
-    width: 256px;
-    height: 128px;
-    background: #F0B31B;
-    margin-left: 20px
-}
-
-.demo-card-event.mdl-card:hover{
-    z-index:1000;
-    box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
-    -webkit-box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
-    -moz-box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
+form {
+  text-align: center;
+  margin: auto;
+  width: 160px;
 }
